OPHYK-1134 initial commit of tiedotuspalvelu in separate repo