@@ -1,40 +1,28 @@
-FROM maven:3.9.14-amazoncorretto-21@sha256:8401c372494dfb3997d9900ae82ed3dc728480e331e2ed85886e2ac3340ec759 AS build
-WORKDIR /app
+FROM maven:3.9.14-amazoncorretto-21-al2023@sha256:e051ce9ecb8ced66ff84c0a2429fd24655d66df067d1e9a4bfcde9ea71ebc6cf AS build
 
+RUN dnf install -y nodejs24 \
+  && alternatives --install /usr/bin/node node /usr/bin/node-24 90 \
+  && alternatives --install /usr/bin/npm npm /usr/bin/npm-24 90 \
+  && alternatives --install /usr/bin/npx npx /usr/bin/npx-24 90
+
+WORKDIR /app
 COPY . .
+
+WORKDIR /app/web
+RUN npm ci
+RUN npx webpack build
+
+WORKDIR /app
 RUN mvn --batch-mode clean package -s codebuild-mvn-settings.xml -DskipTests
 
 FROM amazoncorretto:21.0.10@sha256:704f62cb32e0850ef3bc8d589eb926780bd3a51611df49cc0a0d432f90615372
 WORKDIR /app
 
-COPY --from=build /app/oppijanumerorekisteri-service/target/oppijanumerorekisteri-service-*SNAPSHOT.jar oppijanumerorekisteri.jar
+COPY --from=build /app/target/tiedotuspalvelu-1.0.0.jar application.jar
 COPY --chmod=755 <<"EOF" /app/entrypoint.sh
 #!/usr/bin/env bash
 set -o errexit -o nounset -o pipefail
-
-echo -n ${vtjkysely_truststore_base64} | base64 --decode > /app/vtjkysely-truststore
-echo -n ${vtjkysely_keystore_base64} | base64 --decode > /app/vtjkysely-keystore
-
-exec java \
-  -Dlog4j2.formatMsgNoLookups=true \
-  -XX:MaxDirectMemorySize=256m \
-  -XX:+AlwaysPreTouch \
-  -XX:CompressedClassSpaceSize=256m \
-  -XX:MaxMetaspaceSize=512m \
-  -XX:+UnlockDiagnosticVMOptions \
-  -XX:NativeMemoryTracking=summary \
-  -XX:+PrintNMTStatistics \
-  -Xms6g \
-  -Xmx6g \
-  -Dspring.config.additional-location=classpath:/config/oppijanumerorekisteri.yml,classpath:/config/$ENV.yml \
-  -Denv.name=$ENV \
-  -Dlogging.config=classpath:/config/logback.xml \
-  -Dserver.port=8080 \
-  --add-opens java.base/java.lang=ALL-UNNAMED \
-  --add-opens java.base/java.util=ALL-UNNAMED \
-  -Dnet.bytebuddy.experimental=true \
-  -jar \
-  oppijanumerorekisteri.jar
+exec java -jar application.jar
 EOF
 
 ENTRYPOINT [ "/app/entrypoint.sh" ]
